dropshot/tests/fail/bad_trait_endpoint7.stderr
error[E0277]: the trait bound `Ret: dropshot::handler::HttpResponseContent` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:41:27
   |
41 |         Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
   |            -------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |            |
   |            required by a bound introduced by this call
   |
help: the trait `serde_core::ser::Serialize` is not implemented for `Ret`
  --> tests/fail/bad_trait_endpoint7.rs:13:1
   |
13 | struct Ret {
   | ^^^^^^^^^^
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `dropshot::HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:41:9
   |
41 |         Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
   |         ^^ unsatisfied trait bound
   |
help: the trait `serde_core::ser::Serialize` is not implemented for `Ret`
  --> tests/fail/bad_trait_endpoint7.rs:13:1
   |
13 | struct Ret {
   | ^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:41:9
   |
41 |         Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `serde_core::ser::Serialize` is not implemented for `Ret`
  --> tests/fail/bad_trait_endpoint7.rs:13:1
   |
13 | struct Ret {
   | ^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:38:5
   |
38 | /     async fn bad_endpoint(
39 | |         _rqctx: RequestContext<()>,
40 | |     ) -> Result<HttpResponseOk<Ret>, HttpError> {
   | |_______________________________________________^ unsatisfied trait bound
   |
help: the trait `serde_core::ser::Serialize` is not implemented for `Ret`
  --> tests/fail/bad_trait_endpoint7.rs:13:1
   |
13 | struct Ret {
   | ^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: dropshot::handler::HttpResponseContent` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:28:10
   |
28 |     ) -> Result<HttpResponseOk<Ret>, HttpError>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `serde_core::ser::Serialize` is not implemented for `Ret`
  --> tests/fail/bad_trait_endpoint7.rs:13:1
   |
13 | struct Ret {
   | ^^^^^^^^^^
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:28:10
   |
28 |     ) -> Result<HttpResponseOk<Ret>, HttpError>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `serde_core::ser::Serialize` is not implemented for `Ret`
  --> tests/fail/bad_trait_endpoint7.rs:13:1
   |
13 | struct Ret {
   | ^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `fn(RequestContext<<ServerImpl as MyApi>::Context>) -> impl Future<Output = Result<dropshot::HttpResponseOk<Ret>, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:22:5
   |
18 |   #[dropshot::api_description]
   |   ---------------------------- required by a bound introduced by this call
...
22 | /     #[endpoint {
23 | |         method = GET,
24 | |         path = "/test",
25 | |     }]
26 | |     async fn bad_endpoint(
   | |_________________________^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyApi>::Context>) -> impl Future<Output = Result<dropshot::HttpResponseOk<Ret>, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_endpoint}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
